--- a/ADD/Dockerfile
+++ b/ADD/Dockerfile
@@ -1,6 +1,6 @@
 FROM almalinux:9
 RUN dnf install nginx -y
 RUN rm -f /usr/share/nginx/html/index.html
-ADD https://gist.github.com/lillylangtree/b55828fa05ed3470d352/index.html /usr/share/nginx/html/index.html
+ADD https://github.com/Sankar3969/Docker/blob/main/COPY/index.html /usr/share/nginx/html/index.html
 RUN chmod +x /usr/share/nginx/html/index.html
 CMD ["nginx","-g","daemon off;"]
