--- a/ADD/Dockerfile
+++ b/ADD/Dockerfile
@@ -1,7 +1,6 @@
 FROM almalinux:9
 RUN dnf install nginx -y
 RUN rm -f /usr/share/nginx/html/index.html
-ADD https://github.com/Sankar3969/Docker/blob/main/COPY/index.html /tmp/
-# COPY /tmp/index.html /usr/share/nginx/html/index.html
-# RUN chmod +x /usr/share/nginx/html/index.html
-# CMD ["nginx","-g","daemon off;"]
+ADD https://raw.githubusercontent.com/Sankar3969/Docker/main/COPY/index.html /usr/share/nginx/html/index.html
+RUN chmod +x /usr/share/nginx/html/index.html
+CMD ["nginx","-g","daemon off;"]
