please add devops

--- a/WORKDIR/Dockerfile
+++ b/WORKDIR/Dockerfile
@@ -1,4 +1,4 @@
 FROM almalinux:9
 RUN mkdir /tmp/Docker
 WORKDIR /tmp/Docker
-RUN Echo " i am docker "> hellow.txt
+echo " i am docker " > hellow.txt
