please add devops

--- a/ARG/Dockerfile
+++ b/ARG/Dockerfile
@@ -1,7 +1,7 @@
 ARG version
 ARG course="devops"\
     dration="2hrs"
-FROM almalinux:${version}
+FROM almalinux:${version:-9}
 ARG course="devops1"\
     dration="2hrs1"
 RUN  echo "course is: ${course} and duration:${dration}"
