--- a/ARG/Dockerfile
+++ b/ARG/Dockerfile
@@ -1,8 +1,9 @@
 ARG version
+    course1
 ARG course="devops"\
     dration="2hrs"
 FROM almalinux:${version:-9}
 ARG course="devops1"\
     dration="2hrs1"
-RUN  echo "course is: ${course} and duration:${dration}"
+RUN  echo "course is: ${course} and course1:${course1}"
 CMD ["sleep","100"]
