please add devops

--- a/ARG/Dockerfile
+++ b/ARG/Dockerfile
@@ -3,6 +3,7 @@ ARG version\
 ARG course="devops"\
     dration="2hrs"
 FROM almalinux:${version:-9}
+ENV course1=$course1
 ARG course="devops1"\
     dration="2hrs1"
 RUN  echo "course is: ${course} and course1:${course1}"
